--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "serve": "cd ./functions && npm run build && cd ../ && npm run build && devmode=true firebase serve --only functions,hosting",
+    "serve": "cd ./functions && npm run build && cd ../ && npm run build && devmode=true firebase serve -p 9000 --only functions,hosting",
     "deploy": "cd ./functions && npm run build && cd ../ && npm run build && firebase deploy --only functions,hosting"
   },
   "private": true,
