--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,8 @@
     "@types/q": "^1.0.5",
     "@types/request": "^2.0.6",
     "dot-object": "^1.7.0",
-    "firebase-admin": "~5.4.0",
-    "firebase-functions": "^0.7.1",
+    "firebase-admin": "5.4.0",
+    "firebase-functions": "0.7.0",
     "handlebars": "^4.0.10",
     "handlebars-helpers": "^0.9.8",
     "jsdom": "^11.3.0",
@@ -24,7 +24,7 @@
     "pdfmake": "^0.1.33",
     "q": "^1.5.0",
     "request": "^2.83.0",
-    "scvo-router": "^1.0.12",
+    "scvo-router": "^1.0.13",
     "string": "^3.3.3"
   },
   "private": true,
