--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.4.1",
     "firebase": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "handlebars": "^4.0.10",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
     "scvo-router": "^1.0.14",
