--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "e2e": "ng e2e",
     "serve": "cd ./functions && npm run build && cd ../ && npm run build && devmode=true firebase serve -p 9000 --only functions,hosting",
     "serve-f": "cd ./functions && npm run build && cd ../ && devmode=true firebase serve -p 9000 --only functions",
-    "deploy": "cd ./functions && npm run build && cd ../ && npm run build && firebase deploy --only functions,hosting"
+    "deploy": "cd ./functions && npm run build && cd ../ && npm run build && firebase deploy --only functions,hosting",
+    "deploy-h": "npm run build && firebase deploy --only hosting"
   },
   "private": true,
   "dependencies": {
@@ -32,7 +33,7 @@
     "handlebars": "^4.0.10",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
-    "scvo-router": "^1.0.17",
+    "scvo-router": "^1.0.18",
     "ts-metadata-helper": "0.0.4",
     "zone.js": "^0.8.14"
   },
