--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,8 @@
     "@types/node-sass": "^3.10.32",
     "@types/q": "^1.0.5",
     "@types/request": "^2.0.6",
+    "@types/uuid": "^3.4.3",
+    "cookie-parser": "^1.4.3",
     "dot-object": "^1.7.0",
     "firebase-admin": "5.4.0",
     "firebase-functions": "0.7.0",
@@ -24,8 +26,9 @@
     "pdfmake": "^0.1.33",
     "q": "^1.5.0",
     "request": "^2.83.0",
-    "scvo-router": "^1.0.18",
-    "string": "^3.3.3"
+    "scvo-router": "^1.0.19",
+    "string": "^3.3.3",
+    "uuid": "^3.1.0"
   },
   "private": true,
   "main": "dist/index.js",
