--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "serve": "cd ./functions && npm run build && cd ../ && npm run build && devmode=true firebase serve -p 9000 --only functions,hosting",
     "serve-f": "cd ./functions && npm run build && cd ../ && devmode=true firebase serve -p 9000 --only functions",
     "deploy": "cd ./functions && npm run build && cd ../ && npm run build && firebase deploy --only functions,hosting",
-    "deploy-h": "npm run build && firebase deploy --only hosting"
+    "deploy-h": "npm run build && firebase deploy --only hosting",
+    "deploy-f": "cd ./functions && npm run build && cd ../ && firebase deploy --only functions"
   },
   "private": true,
   "dependencies": {
@@ -33,7 +34,7 @@
     "handlebars": "^4.0.10",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
-    "scvo-router": "^1.0.18",
+    "scvo-router": "^1.0.19",
     "ts-metadata-helper": "0.0.4",
     "zone.js": "^0.8.14"
   },
