--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "handlebars": "^4.0.10",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
-    "scvo-router": "^1.0.19",
+    "scvo-router": "1.0.20",
     "ts-metadata-helper": "0.0.4",
     "zone.js": "^0.8.14"
   },
