--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase": "^4.5.0",
     "font-awesome": "^4.7.0",
     "handlebars": "^4.0.10",
+    "ngx-cookie": "^1.0.0",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
     "scvo-router": "1.0.20",
