--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,8 @@ Thumbs.db
 /functions/test-db/db.json
 /functions/test-db/json/*
 /functions/dist/*
-**/*secrets*
+functions/src/secrets.ts
+**/secrets*
 *secrets*
 /dist/*
 
