--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@types/uglify-js": "^2.6.29",
     "angular2-dynamic-component": "^1.6.1",
     "angularfire2": "^5.0.0-rc.1",
     "core-js": "^2.4.1",
@@ -35,8 +36,9 @@
     "ngx-cookie": "^1.0.0",
     "readline": "^1.3.0",
     "rxjs": "^5.4.2",
-    "scvo-router": "^1.0.35",
+    "scvo-router": "1.0.36",
     "ts-metadata-helper": "0.0.4",
+    "uglify-js": "^3.1.9",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
