--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,7 @@
     "cookie-parser": "^1.4.3",
     "dot-object": "^1.7.0",
     "firebase-admin": "5.4.0",
-    "firebase-functions": "0.7.0",
+    "firebase-functions": "^0.7.0",
     "handlebars": "^4.0.10",
     "handlebars-helpers": "^0.9.8",
     "jsdom": "^11.3.0",
