--- a/functions/package.json
+++ b/functions/package.json
@@ -14,12 +14,12 @@
     "@types/q": "^1.0.5",
     "@types/request": "^2.0.6",
     "@types/uuid": "^3.4.3",
+    "clayhandlebars": "^3.2.2",
     "cookie-parser": "^1.4.3",
     "dot-object": "^1.7.0",
     "firebase-admin": "5.4.0",
     "firebase-functions": "^0.7.0",
     "handlebars": "^4.0.10",
-    "handlebars-helpers": "^0.9.8",
     "jsdom": "^11.3.0",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
