--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "yarn": "echo '#### yarn.lock has changed!'; $NVM_BIN/yarn; cd functions; $NVM_BIN/yarn; cd ..",
     "serve-r": "cd ../scvo-router; npm run build; npm link; cd ../scvo-frontend; npm link scvo-router; cd functions; npm link scvo-router; cd ..; npm run serve",
     "serve": "cd ./functions && npm run build && cd ../ && npm run build && devmode=true firebase serve -p 9000 --only functions,hosting",
     "serve-f": "cd ./functions && npm run build && cd ../ && devmode=true firebase serve -p 9000 --only functions",
     "deploy": "cd ./functions && npm run build && npm run deploy-db && cd ../ && npm run build && firebase deploy --only functions,hosting",
     "deploy-h": "npm run build && firebase deploy --only hosting",
     "deploy-f": "cd ./functions && npm run build && cd ../ && firebase deploy --only functions",
-    "postmerge": "git diff-tree -r --name-only --no-commit-id ORIG_HEAD HEAD | grep --quiet 'yarn.lock' && eval 'yarn; cd functions; yarn; cd ..'"
+    "postmerge": "npm -v; git diff-tree -r --name-only --no-commit-id ORIG_HEAD HEAD | grep --quiet 'yarn.lock' && eval 'npm run yarn'"
   },
   "private": true,
   "dependencies": {
