--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@fortawesome/fontawesome": "^1.1.0",
+    "@fortawesome/fontawesome-pro-light": "^5.0.2",
+    "@fortawesome/fontawesome-pro-regular": "^5.0.2",
+    "@fortawesome/fontawesome-pro-solid": "^5.0.2",
     "@types/uglify-js": "^2.6.29",
     "angular2-dynamic-component": "^1.6.1",
     "angularfire2": "^5.0.0-rc.1",
